Added title and randomize maze colour each round

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title></title>
+        <title>Neverending Quest for the Blue Square</title>
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
         <script src='globals.js'></script>
         <script src='maze.js'></script>
